2006-01-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/debug-dialog.glade:
	  Cosmetic fixes.

	* data/glade/language-dialog.glade:
	  Put the tree views in a homogenous hbox.
	  Removed hardcoded sizes.

	* data/glade/multiclose-dialog.glade:
	  Made dialog resizable.

	* data/glade/preferences-dialog.glade:
	  Added preview tab.

	* data/glade/previewerror-dialog.glade:
	* lib/gaupol/base/delegates/preview.py:
	* lib/gaupol/gtk/delegates/preview.py:
	  New files with preview implementation.

	* data/glade/spellcheck-dialog.glade:
	  Removed hardcoded tree view size.

	* data/ui/menubar.xml:
	* data/ui/popups.xml:
	* data/ui/toolbar.xml:
	  Added preview.

	* gaupol:
	  Raise SystemExit with error code 1.
	  Removed lambdas in favor of nested functions.

	* lib/gaupol/base/delegates/__init__.py:
	* lib/gaupol/gtk/delegates/__init__.py:
	  Added preview module.

	* lib/gaupol/base/delegates/action.py:
	  Cosmetic fixes.

	* lib/gaupol/base/delegates/fileopen.py:
	  (FileOpenDelegate.open_translation_file): Added an assert statement.

	* lib/gaupol/base/delegates/filesave.py:
	  Cosmetic fixes.

	* lib/gaupol/base/delegates/format.py:
	  (FormatDelegate.toggle_dialog_lines): Allow re_tag to be None.

	* lib/gaupol/base/delegates/frconv.py:
	  (FramerateConverter.change_framerate): Replaced TypeError rasing with
	  an assert statement.

	* lib/gaupol/base/error.py:
	  (GaupolBaseError): New base class for errors.
	  (ExternalError): New class for external errors.

	* lib/gaupol/base/util/wwwlib.py:
	  Split URLDocument class to URLReadThread class and read_url function.
	  Fixed IOError not being passed on.

	* lib/gaupol/gtk/delegates/edit.py:
	  Cosmetic fixes.

	* lib/gaupol/gtk/delegates/fileclose.py:
	  Cosmetic fixes.
	  Raise SystemExit with error code 1.

	* lib/gaupol/gtk/delegates/fileopen.py:
	  Cosmetic fixes.

	* lib/gaupol/gtk/delegates/filesave.py:
	  Cosmetic fixes.

	* lib/gaupol/gtk/delegates/format.py:
	  Cosmetic fixes.